--- a/Renamify.html
+++ b/Renamify.html
@@ -5,7 +5,6 @@
         <title> Renamify.me - please rename my employer! </title>
         <link rel="stylesheet" href = "styles.css" >
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular-sanitize.js"></script>
         <script type="text/javascript" src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.6.0.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript" src="js/Renamify.js"></script>
@@ -33,13 +32,13 @@
 						<div class="span10">
 			                <div class="row">
 			                    <div class="span6">
-			                        <h2><div class="pull-left">{{candidateName}} on the Issues</div> <div ng-hide="alertOn()" class="pull-right"><button ng-click="showAlert(true)" class="btn btn-inverse">Update Name</button></div></h2>
-			                        <div class="alert alert-error" ng-show="alertOn()">
-										<a class="close" ng-click="showAlert(false)">&times;</a>
+			                        <h2><div class="pull-left">{{candidateName}} on the Issues</div> <div ng-hide="showAlert" class="pull-right"><button ng-click="setAlert(true)" class="btn btn-inverse" type="button">Update Name</button></div></h2>
+			                        <div class="alert alert-error" ng-show="showAlert">
+										<a class="close" ng-click="setAlert(false)">&times;</a>
 			                            <p>You should really consider changing your name to something more phonetic.</p>
 										<div class="input-append">
 											<input type="text" ng-model="candidateName" class="span4" />
-											<button ng-click="showAlert(false)" class="btn btn-danger" type="button">Try This</button>
+											<button ng-click="setAlert(false)" class="btn btn-danger" type="button">Try This</button>
 										</div> <!-- /.input-append -->
 			                        </div> <!-- /.alert -->
 			                        <div class="form-horizontal">
